--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
         <title>Introduction to JavaScript</title>
     </head>
     <body>
+        <a
+            href="https://github.com/ChinatuL/Introduction-To-Javascript-Task-1"
+            target="_blank"
+            ><h3>Link to Repo</h3></a
+        >
         <script src="./script.js"></script>
     </body>
 </html>
